# photo-to-mesh

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  run_gui.sh  run_pipeline.sh  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  gpu_report.yml
.github/workflows/: ci.yml
routeA_photogrammetry/: mesh_from_pointmap.py
routeB_2dgs/: apply_masks.py  run_2dgs.sh
routeC_feedforward/: hy3dgen_compat.py  run_hunyuan.py
space/: DEPLOY.md  README.md  app.py  mesh_units.py  requirements.txt
src/: common.py  frames_from_video.py  mask_sam3.py  mesh_units.py  pose_vggt.py  turntable.py
tests/: test_apply_masks.py  test_common.py  test_mesh_units.py
