[project]
name = "object-scan"
version = "0.1.0"
description = "Scan an object from a handheld camera and get an object-only mesh, three ways: (A) VGGT point-map -> Open3D mesh, (B) VGGT poses -> 2D Gaussian Splatting -> TSDF mesh, (C) Hunyuan3D / TRELLIS feed-forward."
requires-python = ">=3.10,<3.13"

# Core deps shared by SAM2 masking + VGGT pose + Route A meshing.
# Torch is installed separately by setup.sh from the cu128 index (Blackwell / RTX 5090 needs CUDA 12.8 wheels).
dependencies = [
    "numpy<2.2",
    "pillow",
    "opencv-python",
    "tqdm",
    "trimesh",
    "open3d>=0.18",
    "huggingface_hub",
    "safetensors",
    "einops",
    "scipy",
    "matplotlib",
]

# Torch is NOT pinned here on purpose — installed via the cu128 index in setup.sh.
[tool.uv]
# Allow torch to come from the PyTorch cu128 index.
override-dependencies = []

[tool.uv.sources]
# VGGT is installed from GitHub by setup.sh (editable), not from PyPI.
