[project]
name = "photo-to-mesh"
version = "0.1.0"
description = "Turn photos of a real object into a clean, scaled, 3D-printable mesh: Hunyuan3D (single + multi-view) web GUI with SAM 3 masking, plus experimental VGGT / 2D Gaussian Splatting reconstruction routes."
requires-python = ">=3.10,<3.13"

# Core deps shared by SAM 3 masking + VGGT pose + Route A meshing + the GUI.
# Torch is installed separately by setup.sh from a CUDA wheel index (cu128 by
# default — required for Blackwell/RTX 50xx, fine on Ampere and newer).
# rembg (the GUI's "rembg auto" mode) and the Hunyuan engine deps come from
# `./setup.sh routeC` (the engine's own requirements.txt).
dependencies = [
    "numpy<2.2",
    "pillow",
    "opencv-python",
    "tqdm",
    "trimesh",
    "open3d>=0.18",
    # <1.0: Hunyuan's transformers==4.46.0 (and tokenizers) require huggingface-hub<1.0;
    # leaving this unpinned lets `core` pull a 1.x that breaks `import transformers`.
    "huggingface_hub<1.0",
    "safetensors",
    "einops",
    "scipy",
    "matplotlib",
    # <6: the GUI (and Hunyuan's pin) target Gradio 5.x; 6.x has breaking API changes.
    "gradio<6",
]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.8"]

[tool.ruff]
line-length = 120
# Third-party engines cloned by setup.sh — not ours to lint.
extend-exclude = ["routeC_feedforward/Hunyuan3D-2.1", "routeB_2dgs/2d-gaussian-splatting"]

[tool.ruff.lint]
# E402: imports after sys.path setup are deliberate.
# E702/E731: the compact one-statement-per-thought style used throughout.
ignore = ["E402", "E702", "E731"]
